# opengl-studies

./: CMakeLists.txt  README.md  imgui.ini  main.cpp
libs/: CMakeLists.txt  Shader.cpp  Shader.hpp  Window.cpp  Window.hpp
scripts/: build.sh  clear.sh  run.sh
shaders/: fragment_shader.glsl  fragment_shader02.glsl  vertex_shader.glsl
